add Ultralight files

--- a/skyrim-platform/src/platform_se/CMakeLists.txt
+++ b/skyrim-platform/src/platform_se/CMakeLists.txt
@@ -97,6 +97,11 @@ if(NOT "${SKIP_SKYRIM_PLATFORM_BUILDING}")
     target_include_directories(skyrim_platform PRIVATE "${third_party}")
     target_link_libraries(skyrim_platform PRIVATE skyrim_plugin_resources ui cef platform_lib)
     target_link_libraries(skyrim_platform PRIVATE "${third_party}/frida/frida-gum.lib")
+    target_include_directories(skyrim_platform PRIVATE "${third_party}/ultralight/include")
+    target_link_libraries(skyrim_platform PRIVATE "${third_party}/ultralight/lib/AppCore.lib")
+    target_link_libraries(skyrim_platform PRIVATE "${third_party}/ultralight/lib/Ultralight.lib")
+    target_link_libraries(skyrim_platform PRIVATE "${third_party}/ultralight/lib/UltralightCore.lib")
+    target_link_libraries(skyrim_platform PRIVATE "${third_party}/ultralight/lib/WebCore.lib")
     apply_default_settings(TARGETS skyrim_platform)
     list(APPEND VCPKG_DEPENDENT skyrim_platform)
 
