--- a/skyrim-platform/src/platform_se/CMakeLists.txt
+++ b/skyrim-platform/src/platform_se/CMakeLists.txt
@@ -24,6 +24,7 @@ if(MSVC)
   target_include_directories(cef INTERFACE ${CEF_INCLUDE_DIR})
 
   set(third_party "${SKYRIM_PLATFORM_SOURCE_DIR}/src/third_party")
+  set(config_dir "${SKYRIM_PLATFORM_SOURCE_DIR}/src")
   set(tilted "${SKYRIM_PLATFORM_SOURCE_DIR}/src/tilted")
   
   file(GLOB_RECURSE core_library_src "${tilted}/core_library/*")
@@ -47,6 +48,7 @@ if(MSVC)
   add_library(ui STATIC ${ui_src})
   target_link_libraries(ui PUBLIC core_library hooks reverse)
   target_include_directories(ui PRIVATE ${tilted}/ui )
+  target_include_directories(ui PRIVATE ${config_dir})
   target_link_libraries(ui PUBLIC "d3d11.lib" "dxguid.lib")
   target_link_libraries(ui PUBLIC skyrim_plugin_resources)
   target_link_libraries(ui PUBLIC cef)
@@ -97,7 +99,8 @@ if(NOT "${SKIP_SKYRIM_PLATFORM_BUILDING}")
     add_library(skyrim_platform SHARED ${platform_src})
     set_target_properties(skyrim_platform PROPERTIES OUTPUT_NAME "SkyrimPlatformImpl")
     target_include_directories(skyrim_platform PRIVATE "${third_party}")
-	target_include_directories(skyrim_platform PRIVATE "${tilted}")
+    target_include_directories(skyrim_platform PRIVATE "${tilted}")
+    target_include_directories(skyrim_platform PRIVATE ${config_dir})
     target_link_libraries(skyrim_platform PRIVATE skyrim_plugin_resources ui cef platform_lib)
     target_link_libraries(skyrim_platform PRIVATE "${third_party}/frida/frida-gum.lib")
     apply_default_settings(TARGETS skyrim_platform)
